--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
             </div>
 
             <div class="destination" id="barcelona">
-                <h2>Sao Paolo</h2>
+                <h2>Barcelona</h2>
+            <div class="destination" id="belize">
+                <h2>Cleveland</h2>
+            </div>
+
+            <div class="destination" id="barcelona">
+                <h2>Harrisburg</h2>
             </div>
         </div>
     </div>
