--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 
             <div class="destination" id="barcelona">
                 <h2>Barcelona</h2>
+            <div class="destination" id="belize">
+                <h2>Cleveland</h2>
+            </div>
+
+            <div class="destination" id="barcelona">
+                <h2>Harrisburg</h2>
             </div>
         </div>
     </div>
