--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
 
             <div class="destination" id="barcelona">
-                <h2>Harrisburg</h2>
+                <h2>Allentown</h2>
             </div>
         </div>
     </div>
