Corrected Header ID

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
             <div class="destination" id="barcelona">
                 <h2>Barcelona</h2>
-            <div class="destination" id="belize">
+            <div class="destination" id="Cleveland">
                 <h2>Cleveland</h2>
             </div>
 
-            <div class="destination" id="barcelona">
+            <div class="destination" id="Allentown">
                 <h2>Allentown</h2>
             </div>
         </div>
